[dependencies]
pyo3 = { version = '0.22', features = ['extension-module'] }
tokio = { version = '1.47.1', features = ['full'] }
tower-lsp = '0.20.0'
serde_json = '1.0'


[package]
name = 'oxeye'
version = '0.1.1'
edition = '2021'


[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'
strip = true


[lib]
name = 'oxeye'
crate-type = ['cdylib']
