[build-system]
requires = ['maturin>=1.0,<2.0']
build-backend = 'maturin'

[project]
authors = [
  {email='aekasitt.g@siamintech.co.th', name='Sitt Guruvanich'},
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Programming Language :: Rust',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Operating System :: OS Independent',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
description = 'A Language Server Protocol (LSP) implementation powered by PyO3 and Rust'
name = 'oxeye'
license = {file='LICENSE'}
requires-python = '>=3.9'
readme = 'README.md'
version = '0.1.0'


[project.scripts]
oxeye = 'oxeye:cmdline'


[tool.maturin]
bindings = 'pyo3'
module-name = 'oxeye'
include = ['oxeye.pyi']
